# agentic-engineering

./: CLAUDE.md  PLAN.md  README.md  progress.md
blog/: blog-series-outline.md
keynote/: README.md  prompt.md  review-v4.md  vibecode-keynote-v1.md  vibecode-keynote-v2.md  vibecode-keynote-v3.md  vibecode-keynote-v4-draft.md  vibecode-keynote-v4-notes.md
research/: README.md  agent-hooks.md  context-engineering-mining.md  github-growth.txt  gitlab-act2.md  harness-eng.txt  max_schoening_lenny.md  pair-programming-ralphing.md  rewrites.md  simon-mining.md  thoughtworks-retreat.md  verify-report.md
research/coding-agents/: README.md  aider.md  antigravity.md  claude-code.md  cline.md  codex-cli.md  crush.md  cursor.md  devin.md  gemini-cli.md  github-copilot-agent.md  goose.md  junie.md  kiro.md  opencode.md  pi.md  windsurf.md
vibecoding/: vibecoding-prompt.md
vibecoding/oh-really/: AGENTS.md  odd-animals.md
vibecoding/oh-really/backend/: .env.example  pyproject.toml
vibecoding/oh-really/backend/app/: main.py
vibecoding/wikilinks/: index.html
workshop/: README.md  agentic-engineering-ideas.md  exercise-2-handout.md  workshop-benchmarks.md  workshop-cost-tokens.md  workshop-exercise-1.md  workshop-exercise-2.md  workshop-harnesses.md  workshop-intro.md  workshop-mental-safety.md  workshop-outline.md  workshop-own-experience.md  workshop-practices.md  workshop-resources.md  workshop-tool-use.md
workshop/slides/: 01-intro.md  02-exercise-1.md  agentic-engineering-workshop-v2.pptx  agentic-engineering-workshop.md
(+3 files in other folders)
