[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oh-really-backend"
version = "0.1.0"
description = "Oh-Really! O'Reilly-style meme generator backend"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "neo4j>=6.0.0",
    "boto3>=1.34.0",
    "python-jose[cryptography]>=3.3.0",
    "httpx>=0.27.0",
    "Pillow>=10.3.0",
    "openai>=1.25.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
